--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
+    "build": "next build",
+    "build:export": "next build && next export",
+    "start": "node ./scripts/start.js",
     "rebuild": "rm yarn.lock && rm -rf node_modules && yarn",
     "favicons": "node ./scripts/create-favicons.js"
   },
@@ -18,16 +19,20 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-input-mask": "^2.0.4",
+    "react-paginate": "^6.3.2",
     "react-scroll": "^1.7.16",
+    "react-scrollreveal": "^1.2.0",
     "sass": "^1.26.8",
+    "scrollreveal": "^4.0.7",
     "thundercreate": "^1.0.0"
   },
   "devDependencies": {
-    "@types/brainhubeu__react-carousel": "^1.15.0",
     "@types/lodash-es": "^4.17.3",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "@types/react-input-mask": "^2.0.5",
+    "@types/react-paginate": "^6.2.1",
+    "@types/scrollreveal": "0.0.6",
     "jimp": "^0.13.0",
     "typescript": "^3.9.5"
   }
