--- a/package.json
+++ b/package.json
@@ -1,33 +1,39 @@
 {
   "name": "landing-boilerplate",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
+    "build": "next build",
+    "build:export": "next build && next export",
+    "start": "node ./scripts/start.js",
     "rebuild": "rm yarn.lock && rm -rf node_modules && yarn",
     "favicons": "node ./scripts/create-favicons.js"
   },
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.18.9",
-    "@types/react-scroll": "^1.5.5",
     "lodash-es": "^4.17.15",
     "next": "9.4.4",
     "rc-dialog": "^8.0.1",
+    "rc-upload": "^3.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-input-mask": "^2.0.4",
+    "react-paginate": "^6.3.2",
     "react-scroll": "^1.7.16",
+    "react-scrollreveal": "^1.2.0",
     "sass": "^1.26.8",
+    "scrollreveal": "^4.0.7",
     "thundercreate": "^1.0.0"
   },
   "devDependencies": {
-    "@types/brainhubeu__react-carousel": "^1.15.0",
+    "@types/react-scroll": "^1.5.5",
     "@types/lodash-es": "^4.17.3",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "@types/react-input-mask": "^2.0.5",
+    "@types/react-paginate": "^6.2.1",
+    "@types/scrollreveal": "0.0.6",
     "jimp": "^0.13.0",
     "typescript": "^3.9.5"
   }
